syntax = "proto3";

package api.sms;

import "google/protobuf/any.proto";

option go_package = "edu/api/sms;sms";
option java_multiple_files = true;
option java_package = "api.sms";

message ApiReply {
    int32 code = 1;
    string reason = 2;
    string message = 3;
    int32 ttl = 4;
    int32 count = 5;
    repeated google.protobuf.Any details = 6;
}

message Coupon {}

message CouponHistory {}